Refactor and enhance Google Sign-In and recipe features
- Added `AuthGoogle` namespace and `GoogleSignUpPageView` in `AppShell.xaml`.
- Renamed and reordered `ShellContent` titles and routes for saved recipes and collections.
- Removed "Saverecipe" tab and its content.
- Registered new route `savedrecipe/fooddetail` in `AppShell.xaml.cs`.
- Removed `google_logo.png` and added `GoogleSignUpPageView.xaml` in `MAUIRecipeApp.csproj`.
- Added `GoogleSignUpPageView` and `GoogleSignUpPageViewModel` to service container in `MauiProgram.cs`.
- Removed `UserSavedRecipe` entity configuration from `RecipeDbContext.cs`.
- Updated `UserSavedRecipe` model for Firestore in `UserSavedRecipe.cs`.
- Added `Debug` statement for error handling in `MailService.cs`.
- Commented out `Frid` conversion in `UserSavedRecipesService.cs`.
- Updated Google Sign-In button in `LoginPageView.xaml`.
- Made layout adjustments and added bindings in `FoodRecipePageView.xaml`.
- Updated `UserSavedRecipePageView.xaml` to use `CollectionView`.
- Added `OnAppearing` method in `UserSavedRecipePageView.xaml.cs`.
- Added `GoogleSignUp` command in `LoginPageViewModel.cs`.
- Added `isSaved` property and methods in `FoodRecipePageViewModel.cs`.
- Enhanced `UserSavedRecipePageViewModel` for managing and displaying user-saved recipes.
- Created `GoogleSignUpPageViewModel.cs` with properties and methods for sign-up and login.
- Defined UI for Google Sign-Up in `GoogleSignUpPageView.xaml`.
- Set `BindingContext` in `GoogleSignUpPageView.xaml.cs`.

--- a/AppShell.xaml
+++ b/AppShell.xaml
@@ -5,6 +5,7 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:AdminView="clr-namespace:MAUIRecipeApp.View.AdminView"
     xmlns:Auth="clr-namespace:MAUIRecipeApp.View.Auth"
+    xmlns:AuthGoogle="clr-namespace:MAUIRecipeApp.View.Auth.GoogleSignIn"
     xmlns:UserView="clr-namespace:MAUIRecipeApp.View.UserView"
     xmlns:UserViewCollection="clr-namespace:MAUIRecipeApp.View.UserView.Collection"
     xmlns:View="clr-namespace:MAUIRecipeApp.View"
@@ -30,6 +31,11 @@
     <ShellContent
         ContentTemplate="{DataTemplate Auth:SignUpPageView}"
         Route="signup"
+        Shell.FlyoutBehavior="Disabled"
+        Shell.FlyoutItemIsVisible="False" />
+    <ShellContent
+        ContentTemplate="{DataTemplate AuthGoogle:GoogleSignUpPageView}"
+        Route="googlesignup"
         Shell.FlyoutBehavior="Disabled"
         Shell.FlyoutItemIsVisible="False" />
     <ShellContent
@@ -136,14 +142,6 @@
                     Glyph="{x:Static m:MaterialSharp.Bookmark}"
                     Color="{StaticResource WhiteText}" />
             </Tab.Icon>
-            <ShellContent Title="Saved Recipe" ContentTemplate="{DataTemplate UserView:UserSavedRecipePageView}">
-                <ShellContent.Icon>
-                    <FontImageSource
-                        FontFamily="MaterialSharp"
-                        Glyph="{x:Static m:MaterialSharp.Lunch_dining}"
-                        Color="{StaticResource WhiteText}" />
-                </ShellContent.Icon>
-            </ShellContent>
             <ShellContent Title="Saved Collection" ContentTemplate="{DataTemplate UserView:UserSavedCollectionPageView}">
                 <ShellContent.Icon>
                     <FontImageSource
@@ -152,6 +150,18 @@
                         Color="{StaticResource WhiteText}" />
                 </ShellContent.Icon>
             </ShellContent>
+            <ShellContent
+                Title="Saved Recipe"
+                ContentTemplate="{DataTemplate UserView:UserSavedRecipePageView}"
+                Route="savedrecipe">
+                <ShellContent.Icon>
+                    <FontImageSource
+                        FontFamily="MaterialSharp"
+                        Glyph="{x:Static m:MaterialSharp.Lunch_dining}"
+                        Color="{StaticResource WhiteText}" />
+                </ShellContent.Icon>
+            </ShellContent>
+
         </Tab>
         <Tab Title="Edit Ingre">
             <ShellContent
@@ -176,12 +186,6 @@
                 Shell.FlyoutItemIsVisible="False" />
         </Tab>
 
-        <Tab Title="Saverecipe">
-            <ShellContent
-                ContentTemplate="{DataTemplate UserView:UserSavedRecipesView}"
-                Route="usersavedrecipes"
-                Shell.FlyoutItemIsVisible="False" />
-        </Tab>
 
         <Tab Title="editfood">
             <ShellContent
